--- a/src/App.css
+++ b/src/App.css
@@ -5,71 +5,215 @@
   font-family: 'Inter', sans-serif;
 }
 
-
 body {
   background-color: hsl(36, 100%, 99%);
   min-height: 100vh;
+  font-size: 15px;
 }
 
 main {
-  padding: 40px 100px;
+  padding: 40px 250px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
 }
 
 .main-section {
-  grid-column: 1 / span 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  grid-column: 1 /span 2;
+  display: grid;
+  grid-template-columns: subgrid subgrid;
+  grid-template-rows: subgrid;
+  row-gap: 20px;
+  /* gap: 20px; */
 }
 
 .main-section > img {
   width: 100%;
+  grid-column: 1 / span 2;
+  grid-row: 1 / 1;
 }
 
 .main-section-descr {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: subgrid;
+  /* gap: 20px; */
+}
+
+.main-section-title {
+  font-size: 45px;
+  font-weight: 800;
+  width: 80%;
+}
+
+.main-section-text-container {
+  grid-column: 2;
+  grid-row: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.main-section-text {
+  color:hsl(236, 13%, 42%);
+  width: 100%;
+  font-size: 15px
+}
+
+.main-section-btn {
+  width: 50%;
+  height: 40px;
+  margin-top: auto;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  background-color: hsl(5, 85%, 63%);
+  font-weight: 700;
+  color: white;
+  border: none;
+}
+
+.main-section-btn:hover {
+  cursor: pointer;
+  background-color: black;
+  color: white;
 }
 
 .new-section {
   grid-column: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  background-color: black;
+  color: white;
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.new-section-title {
+  font-size: 32px;
+  color: hsl(35, 77%, 62%);
+  margin-bottom: 20px;
+}
+
+.new-article-title {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.new-article-title:hover {
+  cursor: pointer;
+  color: hsl(35, 77%, 62%);
+}
+
+.new-article-descr {
+  color:hsl(233, 8%, 79%);
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background: hsl(233, 8%, 79%);
+  margin-block: 30px
 }
 
 .topics-section {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  display: flex;
-  justify-content: space-between;
+  grid-column: 1 / 4;
+  height: fit-content;
+  display: grid;
+  grid-template-columns: subgrid;
+  gap: 20px;
 }
 
 .topic-container {
+  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
+  
+}
+
+.topic-1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.topic-2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.topic-3 {
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.topic-descr-container {
+  height: 100%;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.topic-number {
+  font-size: 32px;
+  color: hsl(233, 8%, 79%);
+}
+
+.topic-img {
+  width: 30%;
+}
+
+.topic-title {
+  font-size: 15px;
+}
+
+.topic-title:hover {
+  cursor: pointer;
+  color: hsl(5, 85%, 63%);
+}
+
+.topic-descr {
+  font-size: 13px;
+  color: hsl(236, 13%, 42%);
 }
 
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1150px) {
   main {
     padding: 20px;
     display: flex;
     flex-direction: column;
   }
-  
+
+  .main-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
   .main-section-descr {
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
 
   .topics-section {
+    display: flex;
     flex-direction: column;
   }
 
-  .topic-container  {
-    flex-direction: column;
+  .main-section-title {
+      width: 100%;
+      margin-bottom: 10px;
+  }
+
+  .main-section-text{
+    font-size: 15px;
+    margin-bottom: 20px;
+  }
+  
+  .main-section-btn {
+    margin-bottom: 30px;
   }
 }
