--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,12 +3,13 @@
     /* z-index: 0; */
     position: absolute;
     top: 50px;
-    left: 100px;
+    left: 250px;
 }
 
 header {
     display: flex;
-    padding: 50px 100px;
+    padding: 50px 250px;
+    
 }
 
 .menu-icon-container {
@@ -29,10 +30,16 @@ nav {
 .nav-items > a {
     color: black;
     text-decoration: none;
+    color: hsl(236, 13%, 42%);
+}
+
+a:hover {
+    cursor: pointer;
+    color: hsl(5, 85%, 63%);
 }
 
 
-@media only screen and (max-width: 800px) {
+@media screen and (max-width:1150px) {
     .nav {
         width: 100%;
     }
@@ -82,4 +89,6 @@ nav {
         transform: translateX(-70vw);
         box-shadow: -40vw 0 rgba(0, 0, 0, 0.2);
     }
+
+    
 }
