using rem instead of px

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,14 +1,13 @@
 
 .logo {
-    /* z-index: 0; */
     position: absolute;
-    top: 50px;
-    left: 250px;
+    top: 3.125rem;
+    left: 15.625rem;
 }
 
 header {
     display: flex;
-    padding: 50px 250px;
+    padding: 3.125rem 15.625rem;
     
 }
 
@@ -24,7 +23,7 @@ nav {
 
 .nav-items {
     display: flex;
-    gap: 30px;
+    gap: 1.875rem;
     
 }
 .nav-items > a {
@@ -49,28 +48,28 @@ a:hover {
     }
 
     .logo {
-        top: 20px;
-        left: 20px;
+        top: 1.25rem;
+        left: 1.25rem;
     }
     
     header {
         padding: 0;
-        height: 70px;
+        height: 4.375rem;
     }
 
     main {
-        padding: 20px;
+        padding: 1.25rem;
     }
 
     .menu-icon-container {
         
         position: fixed;
-        top: 20px;
-        right: 20px;
+        top: 1.25rem;
+        right: 1.25rem;
     }
 
     .nav-items {
-        padding: 120px 20px ;
+        padding: 7.5rem 1.25rem ;
         display: flex;
         flex-direction: column;
         
@@ -78,7 +77,6 @@ a:hover {
         position: fixed;
         right: -70vw;
         transition: 0.5s ease-out;
-        /* border: solid 1px black; */
         height: 101vh;
         width: 65%;
         background-color: hsl(36, 100%, 99%);
