--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,15 @@
 body {
   background-color: hsl(36, 100%, 99%);
   min-height: 100vh;
-  font-size: 15px;
+  font-size: 0.938rem;
 }
 
 main {
-  padding: 40px 250px;
+  padding: 2.5rem 15.625rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .main-section {
@@ -24,8 +24,8 @@ main {
   display: grid;
   grid-template-columns: subgrid subgrid;
   grid-template-rows: subgrid;
-  row-gap: 20px;
-  /* gap: 20px; */
+  row-gap: 1.25rem;
+  /* gap: 1.25rem; */
 }
 
 .main-section > img {
@@ -36,8 +36,8 @@ main {
 
 .main-section-descr {
   display: grid;
-  grid-template-columns: subgrid;
-  /* gap: 20px; */
+  grid-template-columns: 1fr 1fr;
+  gap: 1.25rem;
 }
 
 .main-section-title {
@@ -57,12 +57,12 @@ main {
 .main-section-text {
   color:hsl(236, 13%, 42%);
   width: 100%;
-  font-size: 15px
+  font-size: 0.938rem
 }
 
 .main-section-btn {
   width: 50%;
-  height: 40px;
+  height: 2.5rem;
   margin-top: auto;
   text-transform: uppercase;
   letter-spacing: 0.2em;
@@ -82,20 +82,20 @@ main {
   grid-column: 3;
   background-color: black;
   color: white;
-  padding: 30px 20px;
+  padding: 1.875rem 1.25rem;
   display: flex;
   flex-direction: column;
 }
 
 .new-section-title {
-  font-size: 32px;
+  font-size: 2rem;
   color: hsl(35, 77%, 62%);
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .new-article-title {
-  font-size: 18px;
-  margin-bottom: 10px;
+  font-size: 1.125rem;
+  margin-bottom: 0.625rem;
 }
 
 .new-article-title:hover {
@@ -109,26 +109,26 @@ main {
 
 .divider {
   width: 100%;
-  height: 1px;
+  height: 0.063rem;
   background: hsl(233, 8%, 79%);
-  margin-block: 30px
+  margin-block: 1.875rem
 }
 
 .topics-section {
   grid-column: 1 / 4;
   height: fit-content;
   display: grid;
-  grid-template-columns: subgrid;
-  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.25rem;
 }
 
 .topic-container {
-  margin-top: 20px;
+  margin-top: 1.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  
+  gap: 0.625rem;
+
 }
 
 .topic-1 {
@@ -147,14 +147,14 @@ main {
 
 .topic-descr-container {
   height: 100%;
-  padding: 5px;
+  padding: 0.313rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .topic-number {
-  font-size: 32px;
+  font-size: 2rem;
   color: hsl(233, 8%, 79%);
 }
 
@@ -163,7 +163,7 @@ main {
 }
 
 .topic-title {
-  font-size: 15px;
+  font-size: 0.938rem;
 }
 
 .topic-title:hover {
@@ -172,14 +172,14 @@ main {
 }
 
 .topic-descr {
-  font-size: 13px;
+  font-size: 0.813rem;
   color: hsl(236, 13%, 42%);
 }
 
 
 @media only screen and (max-width: 1150px) {
   main {
-    padding: 20px;
+    padding: 1.25rem;
     display: flex;
     flex-direction: column;
   }
@@ -205,15 +205,15 @@ main {
 
   .main-section-title {
       width: 100%;
-      margin-bottom: 10px;
+      margin-bottom: 0.625rem;
   }
 
   .main-section-text{
-    font-size: 15px;
-    margin-bottom: 20px;
+    font-size: 0.938rem;
+    margin-bottom: 1.25rem;
   }
   
   .main-section-btn {
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
   }
 }
