--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -62,8 +62,7 @@ a:hover {
     }
 
     .menu-icon-container {
-        
-        position: fixed;
+        position: absolute;
         top: 1.25rem;
         right: 1.25rem;
     }
@@ -72,7 +71,6 @@ a:hover {
         padding: 7.5rem 1.25rem ;
         display: flex;
         flex-direction: column;
-        
         align-items: start;
         position: fixed;
         right: -70vw;
