--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -6,14 +6,18 @@
 }
 
 header {
+    margin-left: auto;
     display: flex;
     padding: 3.125rem 15.625rem;
-    
 }
 
 .menu-icon-container {
     z-index: 3;
     visibility: hidden;
+}
+
+.menu-icon-container:hover {
+    cursor: pointer;
 }
 
 nav {
@@ -67,6 +71,10 @@ a:hover {
         right: 1.25rem;
     }
 
+    .menu-icon-container.opened {
+        position: fixed;
+    }
+
     .nav-items {
         padding: 7.5rem 1.25rem ;
         display: flex;
@@ -78,7 +86,6 @@ a:hover {
         height: 101vh;
         width: 65%;
         background-color: hsl(36, 100%, 99%);
-        
     }
 
     .nav-items.opened {
